all contents updated

--- a/src/main/resources/templates/admin/admin-home.html
+++ b/src/main/resources/templates/admin/admin-home.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/admin-header.css}">
   <link rel="stylesheet" th:href="@{/assets/css/form.css}">
-
+  <link th:href="@{/assets/images/favicon.ico}" rel="icon">
   <style>
     /* Custom styles (optional) */
     .navbar-brand {
