--- a/src/main/resources/templates/admin/admin-media.html
+++ b/src/main/resources/templates/admin/admin-media.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <script src="/assets/js/drag-drop-upload.js"></script>
   <link rel="stylesheet" th:href="@{/assets/css/admin-header.css}">
+  <link th:href="@{/assets/images/favicon.ico}" rel="icon">
 
   <style>
     /* Custom styles (optional) */
