--- a/src/main/resources/templates/admin/admin-post-add-form.html
+++ b/src/main/resources/templates/admin/admin-post-add-form.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
     <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
     <link rel="stylesheet" th:href="@{/assets/css/admin-header.css}">
-
+    <link th:href="@{/assets/images/favicon.ico}" rel="icon">
 </head>
 <body>
     <div th:replace="~{fragments/header :: menu}"></div>
