--- a/src/main/resources/templates/admin/admin-post-list.html
+++ b/src/main/resources/templates/admin/admin-post-list.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/admin-header.css}">
  <link rel="stylesheet" th:href="@{/assets/css/admin-post-list.css}">
-
+    <link th:href="@{/assets/images/favicon.ico}" rel="icon">
   <style>
     /* Custom styles (optional) */
     .navbar-brand {
