--- a/src/main/resources/templates/basic/services.html
+++ b/src/main/resources/templates/basic/services.html
@@ -25,22 +25,97 @@
   </div>
   <div id="vapt" class="tab-content active m-1">
     <h2>Vulnerability Assessment & Penetration Testing (VAPT)</h2>
-    <p><img th:src="@{/assets/images/service-sample (1).png}" /></p>
+    <h4>Overview</h4>
+    <p>The VAPT program identifies security vulnerabilities in the systems, networks, and applications of critical government agencies. So far, VAPT has been conducted
+      on 2,246 web applications, servers, network devices, and mobile applications
+      across 32 government institutions, resulting in 51 reports.</p>
+    <h4>Server VAPT</h4>
+    <p>Vulnerability assessment and penetration test on server operating system. 
+      This is a black box test which doesn’t require user credential and this test will identify possible installed services, 
+      running services, open ports, service version detection, network communications, patch information etc</p>
+    <h4>Website VAPT</h4>
+    <p>Vulnerability assessment and penetration test on website to detect possible vulnerabilities. 
+      This VAPT doesn’t require user credential. This test will identify web technologies and versions, SQL injection, 
+      Cross-site scripting, Unrestricted file upload, Web backdoor, Directory traversal etc.
+      Note: Each unique sub-domain will consider as domain.</p>
+    <h4>Web Application VAPT</h4>
+    <p>Vulnerability assessment and penetration test on web application to detect possible vulnerabilities. 
+      This test may require web application user credential to conduct vulnerability assessment to detect SQL injection, 
+      Cross-site scripting, Unrestricted file upload, Local or remote file inclusion, Authentication bypass, Misconfiguration etc.
+      Note: Each unique sub-domain will consider as domain.</p>
   </div>
 
   <div id="inc-response" class="tab-content m-1">
     <h2>Incident Response</h2>
-    <p><img th:src="@{/assets/images/service-sample (2).png}" /></p>
+    <p>BGD e-GOV CIRT will receive information regarding cyber security incidents, triage incidents and coordinate response. 
+      When a cybersecurity incident or problem is reported from an organization, the CIRT team responds quickly and effectively to 
+      mitigate damage, control threats, and restore normal operations.Possible activities related to incident handling include but not limited to: </p>
+    <ul>
+      <li>Incident analysis and evidence collection.</li>
+      <li>Coordinating and managing the response to cybersecurity incidents to minimize damage and recover systems quickly.</li>
+      <li>Providing technical assistance and support to affected organizations during and after an incident.</li>
+      <li>Performing post-incident reviews to learn from incidents and improve future response capabilities.</li>
+      <li>Documenting and reporting on incidents to share lessons learned and improve overall cybersecurity awareness.</li>   
+    </ul>
   </div>
 
   <div id="it-audit" class="tab-content m-1">
     <h2>IT Audit & Risk Assessment</h2>
-    <p><img th:src="@{/assets/images/service-sample (3).png}" /></p>
+    <h4>Overview</h4>
+    <p>IT audits are conducted to identify vulnerabilities in the
+        information technology systems of important organizations, ensuring their
+        cybersecurity. To date, 35 IT audits have been completed in government
+        institutions, and reports have been submitted. Following are the main activities by IT Audit & Risk Assessment team</p>
+    <ul>
+      <li>Doing Risk assessment for Organization</li>
+      <li>Training on Basic Risk Assessment</li>
+      <li>Training on Advanced Risk Assessment</li>
+      <li>Doing Audit assessment for Organization</li>
+      <li>Training on Basic Information Security and Process Audit (Without Global Certification)</li>
+    </ul>
+
+    <h4>Service Flowchart</h4>
+    <p><img th:src="@{/assets/images/it-audit-flow.png}" /></p>
   </div>
 
   <div id="forensics" class="tab-content m-1">
     <h2>Digital Forensics</h2>
-    <p><img th:src="@{/assets/images/service-sample (4).png}" /></p>
+    <p>The Digital Forensics Lab at BGD e-GOV CIRT offers essential digital forensic services related to cyber incidents for various
+      government, private, and law enforcement agencies. This service conducts digital forensic investigations to identify the root cause of incidents, gather evidence, and support legal 
+      proceedings if necessary. Analyzing malware and other malicious activities to understand their behavior and develop mitigation strategies.
+      Activities include but not limited to: </p>
+    <h4>Computer Forensic</h4>
+    <ul>
+      <li>Duration: Min 5 working days / case </li>
+      <li>Evidence Detection</li>
+      <li>Evidence Acquisition</li>
+      <li>Evidence Analysis/Examination</li>
+      <li>Documenting and Reporting</li>
+    </ul>
+    <h4>Mobile Forensic</h4>
+    <ul>
+      <li>Duration: Min 7 working days / case </li>
+      <li>Evidence Detection</li>
+      <li>Evidence Acquisition</li>
+      <li>Evidence Analysis/Examination</li>
+      <li>Documenting and Reporting</li>
+    </ul>
+    <h4>Forensic Support Service</h4>
+    <ul>
+      <li>Duration: Min 2 MAN days </li>
+      <li>On premise Forensic Technical Support</li>
+      <li>Technical support on Forensic Data Acquisition</li>
+      <li>Technical support on Forensic Data Analysis & Reporting</li>
+      <li>Note: Forensic Tools are not included in the service, Client must provide the tools. For services including tools please refer to COMPUTER_FORENSIC & MOBILE_FORENSIC.</li>
+    </ul>
+    <h4>Digital Forensics Training </h4>
+    <ul>
+      <li>Duration: 3 days (3 hours per class) / batch (total 9 hours minimum) </li>
+      <li>Mode: On premise, hands on training. </li>
+      <li>Tools: Open source. </li>
+      <li>Participant: 20 persons per batch </li>
+      <li>Note: participant’s stationary & snacks arranged by inviting authority.</li>
+    </ul>
   </div>
   <!-- <div id="data-center" class="tab-content m-1">
     <h2>Data Center Operations</h2>
@@ -48,11 +123,41 @@
   </div> -->
   <div id="cti" class="tab-content m-1">
     <h2>Cyber Threat Intelligence (CTI)</h2>
-    <p><img th:src="@{/assets/images/service-sample (6).png}" /></p>
+    <h4>Overview</h4>
+    <p>Information about potential and organized cyber-attacks, as well as cyber threats, is collected and analyzed. Possible
+      cyber risks to respective organizations are communicated through notifications and alerts, with 632 reports sent to various government institutions thus far.</p>
+    <h4>Activities</h4>
+    <p>Threat Intelligence will be provided to the entities such as Critical Information Infrastructures, Banking and Financial 
+      Institutions, Law Enforcement Agencies etc. Main activities are: </p>
+    <ul>
+      <li>Domain /entity based threat received from multiple sources will be provided on monthly basis.</li>
+      <li>Critical threat intelligence will be shared as and when received.</li>
+      <li>This service is purely on subscription basis.</li>
+      <li>Operating a Cyber Sensor Unit to continuously monitor the network of selected organizations for suspicious activities and emerging threats.</li>
+      <li>Gathering and analyzing threat intelligence to anticipate and mitigate potential cyber threats.</li>
+      <li>Issuing alerts and advisories to mitigate probable cybersecurity risks.</li>
+    </ul>
   </div>
   <div id="capacity" class="tab-content m-1">
     <h2>Creating Awareness & Capacity Building</h2>
-    <p><img th:src="@{/assets/images/service-sample (1).png}" /></p>
+    <h4>Overview</h4>
+    <p>As a part of awareness and capacity building BGD e-GOV CIRT conducts workshops, seminars, cyber drills and training programs 
+      to raise awareness and build capacity among stakeholders about cybersecurity best practices. Publishing guidelines to educate organizations 
+      on how to protect their systems and data is also a part of this service.</p>
+    <h4>Component 1: Basic Cyber Security Training </h4>
+    <ul>
+      <li>Duration: 3 working days </li>
+      <li>Maximum 10 number of participants</li>
+      <li>Basic attack and basic defense scenario simulation</li>
+      <li>Basic cyber security awareness</li>
+    </ul>
+    <h4>Component 2: Advance Cyber Security Training </h4>
+    <ul>
+      <li>Duration: 5 working days </li>
+      <li>Maximum 10 number of participants</li>
+      <li>Advance attack and basic defense scenario simulation</li>
+      <li>Hands on training on Kali OS</li>
+    </ul>
   </div>
 
   <div th:replace="~{fragments/footer :: footer}"></div>     
