--- a/src/main/resources/templates/admin/admin-incident-details.html
+++ b/src/main/resources/templates/admin/admin-incident-details.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Report Incident Form</title>
+  <title>Incident Report</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/form.css}">
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/common.css}">
+  <link rel="stylesheet" th:href="@{/assets/css/admin-header.css}">
   <link th:href="@{/assets/images/favicon.ico}" rel="icon">
   <style>
     body {
@@ -19,8 +20,9 @@
 </head>
 <body>
   <div th:replace="~{fragments/header :: menu}"></div>
+  <div th:replace="~{fragments/admin-header :: menu}"></div>
 <div class="form-wrapper">
-  <form id="incidentForm" th:action="@{/report-incident}" method="post" th:object="${incidentDto}" enctype="multipart/form-data" >
+  <form id="incidentForm" method="post" th:action="'/admin/incident/'+${incident.id}" th:object="${incident}" enctype="multipart/form-data" >
     <div class="form-step active" data-step="1">
       <div class="form-section">
         <h5>Reporter Information</h5>
@@ -87,8 +89,8 @@
           <input type="text" class="form-control" id="ip" th:field="*{domainIP}" placeholder="(If any) Format: 114.115.115.115 - www.example.com">
       </div>
       <div class="mb-3">
-          <label for="fileUpload">Logs / Evidence Upload 	(Provide all the files within a .zip, .7z or .rar format)</label>
-          <input type="file" class="form-control" id="fileUpload" th:field="*{files}"  accept=".zip,.7z, .rar" >
+          <label for="fileUpload">Logs / Evidence files</label><br/>
+          <a th:href="'/media?id='+ ${incident.getFileName()}"> Download File</a>
       </div>
       <div class="step-buttons">
         <div></div>
@@ -119,10 +121,6 @@
         <div class="mb-3">
           <label for="description" class="form-label">Description</label>
           <textarea class="form-control" th:field="*{description}" id="description" rows="4" placeholder="Briefly describe what happened..."></textarea>
-        </div>
-        <div class="mb-3">
-          <label for="date" class="form-label">Date of Incident</label>
-          <input type="datetime-local" th:field="*{incidentTime}"  class="form-control" id="date">
         </div>
         <div class="mb-3">
           <label for="affectedAsset" class="form-label">Affected System or Asset</label>
@@ -195,13 +193,10 @@
           <label for="stepsTaken" class="form-label">Steps Already Taken</label>
           <textarea class="form-control" id="stepsTaken" th:field="*{stepsTaken}" rows="4" placeholder="Please describe what are the containments or mitigations done till now"></textarea>
         </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="Captcha">
-        <label class="form-check-label" for="Captcha">Captcha Input</label>
-      </div>
       <div class="step-buttons">
         <button type="button" class="btn btn-secondary prev-btn">Back</button>
-        <button type="submit" class="btn-cirt">Submit Incident Details</button>
+        <button type="submit" class="btn-cirt" th:if="${incident.responseStatus == 'New'}">Mark as Response Done</button>
+        <button class="btn btn-default" th:unless="${incident.responseStatus == 'New'}" disabled>✅Response Done</button>
       </div>
     </div>
   </form>
