--- a/src/main/resources/templates/fragments/admin-header.html
+++ b/src/main/resources/templates/fragments/admin-header.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Navigation Bar</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/path/to/ad-navbar-styles.css">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-</head>
-<body>
-
 <!-- Navigation Bar -->
-<nav class="ad-navbar navbar-expand-lg navbar-light" th:fragment="menu">
+<nav class="ad-navbar navbar-expand-lg navbar-light" th:fragment="menu"  xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
   <div class="container-fluid">
     <button class="ad-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#ad-navbarNav" aria-controls="ad-navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="ad-toggler-icon"></span>
@@ -35,6 +22,11 @@
           </ul>
         </li>
         <li class="ad-nav-item">
+          <a class="ad-nav-link" href="/admin/incident" id="ad-userDropdown" role="button" aria-expanded="false">
+            Incidents
+          </a>
+        </li>
+        <li class="ad-nav-item" sec:authorize="!hasRole('ADMIN')">
           <a class="ad-nav-link" href="/admin/user" id="ad-userDropdown" role="button" aria-expanded="false">
             User
           </a>
@@ -44,8 +36,8 @@
             <img src="/assets/images/profile-icon.png" alt="Profile" style="width: 30px; height: 30px; border-radius: 50%;">
           </button>
           <ul class="ad-dropdown-menu" aria-labelledby="ad-profileDropdown">
-            <li><a class="ad-dropdown-item" href="#">Profile</a></li>
-            <li><a class="ad-dropdown-item" href="#">Change Password</a></li>
+            <li><a class="ad-dropdown-item" href="/admin/user">User Management</a></li>
+            <li><a class="ad-dropdown-item" href="/admin/my-password">Change My Password</a></li>
             <li><a class="ad-dropdown-item" href="/logout">Signout</a></li>
           </ul>
         </li>
@@ -53,10 +45,3 @@
     </div>
   </div> 
 </nav>
-
-<!-- Bootstrap JS and Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-</body>
-</html>
